--- a/src/about.html
+++ b/src/about.html
@@ -6,6 +6,9 @@
     <link rel="icon" type="image/png" href="/images/icon.svg">
     <link rel="stylesheet" href="styles/fontawesome-4.6.3.css">
     <link rel="stylesheet" href="styles/app.css">
+    <style>
+      .button { margin-bottom: 0; }
+    </style>
   </head>
   <body style="padding: 1em;">
 
