--- a/src/add-edit-proxy.html
+++ b/src/add-edit-proxy.html
@@ -16,6 +16,7 @@
 
       .onOff > label { flex: 4;  margin-right: 1em; }
       .onOff > div { flex: 1 !important; }
+      .main button { margin-bottom: 0; }
       .main button:last-of-type { margin-right: 0; }
       .unsupported { margin-top: 1.5em; }
 
@@ -86,7 +87,6 @@
         </select>
 
         <label data-i18n="color"></label>
-        <input type="color" id="color" value="#ff7700">
         <input id="colorChooser" class="button" type="text">
 
         <div class="flex onOff notForBasic">
