--- a/src/import.html
+++ b/src/import.html
@@ -6,12 +6,15 @@
     <link rel="icon" type="image/png" href="/images/icon.svg">
     <link rel="stylesheet" href="styles/fontawesome-4.6.3.css">
     <link rel="stylesheet" href="styles/app.css">
+    <style>
+      .button { margin-bottom: 0; }
+    </style>
   </head>
   <body style="padding: 1em;">
 
     <!-- header -->
     <div class="callout">
-      <h3 data-i18n="options"><img src="/images/icon.svg" style="vertical-align: middle;" alt=""> FoxyProxy </h3>
+      <h3 data-i18n="import"><img src="/images/icon.svg" style="vertical-align: middle;" alt=""> </h3>
     </div>
 
     <!-- main -->
