--- a/src/pattern-help.html
+++ b/src/pattern-help.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>FoxyProxy Pattern Help</title>
-    <link rel="icon" type="image/png" href="/images/48x48.svg">
+    <link rel="icon" type="image/png" href="/images/icon.svg">
     <link rel="stylesheet" href="styles/fontawesome-4.6.3.css">
     <link rel="stylesheet" href="styles/app.css">
   </head>
@@ -11,7 +11,7 @@
 
     <!-- header -->
     <div class="callout">
-      <h3><img src="/images/48x48.svg" style="vertical-align: middle;" alt=""> FoxyProxy Pattern Help</h3>
+      <h3><img src="/images/icon.svg" style="vertical-align: middle;" alt=""> Pattern Help</h3>
     </div>
     
     <!-- main -->
