--- a/src/pattern-tester.html
+++ b/src/pattern-tester.html
@@ -9,6 +9,7 @@
     <style>
       .flex { display: flex; }
       .flex > * { flex: 1; }
+      .button { margin-bottom: 0; }
     </style>
   </head>
   <body style="padding: 1em;">
