--- a/src/log.html
+++ b/src/log.html
@@ -16,6 +16,23 @@
       td:nth-child(4) { max-width: 8em; }
       td:nth-child(5) { max-width: 8em; }
       td:nth-child(6) { max-width: 14em; }
+      #spinner {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: rgba(255, 255, 255, 0.8);
+        margin: 0;
+        width: 100%;
+        height: 100%;
+        position: fixed;
+        top: 0;
+        left: 0;
+        opacity: 0;
+        z-index: 10000;
+        transition: all 1s ease-in-out;
+        font-size: 20em;
+      }
+      #spinner.on { opacity: 0.5; }
     </style>
   </head>
   <body style="padding: 1em;">
@@ -25,11 +42,8 @@
       <h3 data-i18n="options"><img src="/images/icon.svg" style="vertical-align: middle;" alt=""> FoxyProxy </h3>
     </div>
 
-    <!-- spinner -->
-    <div id="spinner" class="callout hide-unimportant">
-      <span class="fa fa-refresh fa-spin fa-5x fa-fw fp-orange"></span>
-    </div>
-
+    <!-- spinner --> <!-- options, patterns, log -->
+    <div id="spinner" class="on"><span class="fa fa-refresh fa-spin fp-orange"></span></div>
 
 
     <!-- main -->
