--- a/src/patterns.html
+++ b/src/patterns.html
@@ -19,6 +19,24 @@
       th:nth-of-type(3), th:nth-of-type(4), th:nth-of-type(5) { width: 5em; }
       th:nth-of-type(6) { width: 7em; }
       td:nth-of-type(3), td:nth-of-type(4), td:nth-of-type(5) { text-align: center; }
+      .buttonSet button { margin-bottom: 0; }
+      #spinner {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: rgba(255, 255, 255, 0.8);
+        margin: 0;
+        width: 100%;
+        height: 100%;
+        position: fixed;
+        top: 0;
+        left: 0;
+        opacity: 0;
+        z-index: 10000;
+        transition: all 1s ease-in-out;
+        font-size: 20em;
+      }
+      #spinner.on { opacity: 0.5; }
     </style>
   </head>
   <body style="padding: 1em;">
@@ -28,10 +46,8 @@
       <h3 id="header"><img src="/images/icon.svg" style="vertical-align: middle;" alt=""> </h3>
     </div>
 
-    <!-- spinner -->
-    <div id="spinner" class="callout hide-unimportant">
-      <span class="fa fa-refresh fa-spin fa-5x fa-fw fp-orange"></span>
-    </div>
+    <!-- spinner --> <!-- options, patterns, log -->
+    <div id="spinner" class="on"><span class="fa fa-refresh fa-spin fp-orange"></span></div>
 
     <!-- error -->
     <div id="error" class="callout hide-unimportant">
@@ -40,7 +56,7 @@
     </div>
 
     <!-- main -->
-    <div class="callout" style="padding: 1em;">
+    <div class="callout main" style="padding: 1em;">
       <p style="text-align: right;">
         <a href="/pattern-help.html" target="_blank">Pattern Help</a> |
         <a href="/pattern-tester.html" target="_blank">Pattern Tester</a>
@@ -87,11 +103,11 @@
       </div>
 
 
-    <p style="text-align: center;">Add black patterns to prevent this proxy being used for localhost and intranet/private IP addresses
+    <p style="margin-top: 1em; text-align: center;">Add black patterns to prevent this proxy being used for localhost and intranet/private IP addresses
       &nbsp;  <span data-tooltip aria-haspopup="true" class="has-tip" data-disable-hover="false" title="Adds blacklist patterns for localhost, 127.0.0.1, 192.168.*.*, 172.16.*.*, and 10.*.*.*">Help</span>
         <button type="button" class="button tiny" style="margin-left: 1em; vertical-align: initial;" data-i18n="add"></button></p>
 
-     <div class="flex">
+     <div class="buttonSet flex">
         <div>
           <button type="button" class="button" data-i18n="importPatterns"></button>
           <button type="button" class="button" data-i18n="exportPatterns"></button>
